# ChangeLog for dev-ruby/yamlrb
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/yamlrb/Attic/ChangeLog,v 1.3 2003/04/10 12:28:17 twp Exp $

*yamlrb-0.49.2 (10 Apr 2003)

  10 Apr 2003; Tom Payne <twp@gentoo.org> yamlrb-0.49.2.ebuild :

  Version bump.

*yamlrb-0.49.1 (10 Apr 2003)

  10 Apr 2003; Tom Payne <twp@gentoo.org> yamlrb-0.49.1.ebuild :

  Version bump. Tidied ebuild.

*yamlrb-0.47 (31 Jan 2003)

  31 Jan 2003; Ryan Phillips <rphillips@gentoo.org> : new package. Submitted by Holden Glova.
  Fixes #12833